<resources>
    <string name="app_name">Blood Donation App</string>
    <string-array name="spinner_list">
        <item>Male</item>
        <item>Female</item>
        <item>Trans</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="survey_q1">Have you ever donated blood before</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="survey_question_2">What is your blood type</string>
    <string name="Aplus">A positive</string>
    <string name="Bplus">B positive</string>
    <string name="Oplus">O positive</string>
    <string name="ABplus"> AB positive</string>
    <string name="Anegative">A negative</string>
    <string name="Bnegative">B negative</string>
    <string name="Onegative">O negative</string>
    <string name="ABnegative">AB negative</string>
    <string name="survey_q3">The reason why you want to donate blood</string>
</resources>
