<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/redgradbackground"
    android:layout_width="match_parent" android:layout_height="match_parent">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:elevation="5dp"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp">
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/survey_q1"
                       android:textStyle="bold"
                       android:textAlignment="center"/>
                   <RadioGroup
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/yes"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/no"/>
                   </RadioGroup>
               </android.support.design.widget.TextInputLayout>
           </android.support.v7.widget.CardView>
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:elevation="5dp"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp">
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/survey_question_2"
                       android:textStyle="bold"
                       android:textAlignment="center"/>
                   <RadioGroup
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/Aplus"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/Bplus"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/Oplus"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/ABplus"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/Anegative"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/Bnegative"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/ABnegative"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/Onegative"/>
                   </RadioGroup>
               </android.support.design.widget.TextInputLayout>
           </android.support.v7.widget.CardView>
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:elevation="5dp"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp">
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/survey_q3"
                       android:textStyle="bold"
                       />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="Enter your answer here"/>
               </android.support.design.widget.TextInputLayout>
           </android.support.v7.widget.CardView>
       </LinearLayout>
   </ScrollView>

</RelativeLayout>